--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,5 @@
 body {
     margin: 0;
     padding: 0;
-    min-width: 800px;
     background-color: black;
 }
